mapping update from old btrfs

--- a/rc.conf
+++ b/rc.conf
@@ -338,10 +338,10 @@ map }     traverse
 map gh cd ~
 map gr cd /
 
-map gb cd /btrfs
-map gs cd /btrfs/source
+# map gb cd /data/datastore
+map gs cd /data/datastore/
 
-map gf cd /run/media/zakk/DATA - R10
+map gf cd /data/backup/archive
 map gm cd /run/media
 
 map gl cd -r .
